syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "v1alpha1";

import "mesh/v1alpha1/selector.proto";

// ProxyTemplate defines the desired state of ProxyTemplate
message ProxyTemplate {

  // List of Dataplane selectors.
  // +optional
  repeated Selector selectors = 1;

  // Configuration for ProxyTemplate
  Conf conf = 2;

  message Conf {
    // List of imported profiles.
    // +optional
    repeated string imports = 1;

    // List of raw xDS resources.
    // +optional
    repeated ProxyTemplateRawResource resources = 2;
  }
}

message ProxyTemplateSource {

  // Name of a configuration source.
  // +optional
  string name = 1;

  oneof type {

    // Profile, e.g. `default-proxy`.
    // +optional
    ProxyTemplateProfileSource profile = 2;

    // Raw xDS resources.
    // +optional
    ProxyTemplateRawSource raw = 3;
  }
}

message ProxyTemplateProfileSource {

  // Profile name.
  string name = 1;

  // Profile params if any.
  // +optional
  map<string, string> params = 2;
}

message ProxyTemplateRawSource {

  // List of raw xDS resources.
  // +optional
  repeated ProxyTemplateRawResource resources = 1;
}

message ProxyTemplateRawResource {

  // The resource's name, to distinguish it from others of the same type of
  // resource.
  string name = 1;

  // The resource level version. It allows xDS to track the state of individual
  // resources.
  string version = 2;

  // xDS resource.
  string resource = 3;
}
